--- a/docs/source/fables/猴子.md
+++ b/docs/source/fables/猴子.md
@@ -9,13 +9,13 @@
 
 ```{admonition} **寓意**
 :class: tip
-> 骄傲在败坏以先。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 骄傲在败坏以先。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio53_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio53_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE MONKEY AS KING
@@ -24,13 +24,13 @@ At a gathering of all the animals the Monkey danced and delighted them so much t
 
 ```{admonition} **Moral**
 :class: tip
-> Pride comes before a fall.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Pride comes before a fall.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio53.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio53.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -43,13 +43,13 @@ At a gathering of all the animals the Monkey danced and delighted them so much t
 
 ```{admonition} **寓意**
 :class: tip
-> 在母亲的眼里都会认为自己的孩子是永远漂亮和美丽的孩子。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 在母亲的眼里都会认为自己的孩子是永远漂亮和美丽的孩子。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio56_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio56_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## JUPITER AND THE MONKEY
@@ -58,13 +58,13 @@ Jupiter issued a proclamation to all the beasts, and offered a prize to the one 
 
 ```{admonition} **Moral**
 :class: tip
-> Mother love is blind.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Mother love is blind.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio56.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio56.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -77,13 +77,13 @@ Jupiter issued a proclamation to all the beasts, and offered a prize to the one 
 
 ```{admonition} **寓意**
 :class: tip
-> 猴子的表演给大家带来欢乐，但要记住：只有在真正会的技能前提下，才能受到大家的认可，欺骗表面的表演只会得到人们的反对。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 猴子的表演给大家带来欢乐，但要记住：只有在真正会的技能前提下，才能受到大家的认可，欺骗表面的表演只会得到人们的反对。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio162_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio162_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE MONKEY AND THE CAMEL
@@ -92,13 +92,13 @@ At a gathering of all the beasts the Monkey gave an exhibition of dancing and en
 
 ```{admonition} **Moral**
 :class: tip
-> The moral of the story is to be proud of your own unique talents and abilities, rather than trying to imitate someone else who may appear to be more successful.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> The moral of the story is to be proud of your own unique talents and abilities, rather than trying to imitate someone else who may appear to be more successful.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio162.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio162.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -111,13 +111,13 @@ At a gathering of all the beasts the Monkey gave an exhibition of dancing and en
 
 ```{admonition} **寓意**
 :class: tip
-> 此文寓意是：虚伪将带来惩罚，真诚才能获得尊重。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 此文寓意是：虚伪将带来惩罚，真诚才能获得尊重。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio226_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio226_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE MONKEY AND THE DOLPHIN
@@ -126,13 +126,13 @@ When people go on a voyage they often take with them lap-dogs or monkeys as pets
 
 ```{admonition} **Moral**
 :class: tip
-> The moral of this story is that honesty is always the best policy. It is better to be truthful and accept the consequences than to deceive and risk dire consequences.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> The moral of this story is that honesty is always the best policy. It is better to be truthful and accept the consequences than to deceive and risk dire consequences.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio226.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio226.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -145,13 +145,13 @@ When people go on a voyage they often take with them lap-dogs or monkeys as pets
 
 ```{admonition} **寓意**
 :class: tip
-> 本文给出的寓意是：妒忌乃是毁灭良知之源，节制你的欲望，做你力所能及的事。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 本文给出的寓意是：妒忌乃是毁灭良知之源，节制你的欲望，做你力所能及的事。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio318_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio318_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE MONKEY AND THE CAMEL
@@ -160,13 +160,13 @@ At a great celebration in honor of King Lion, the Monkey was asked to dance for 
 
 ```{admonition} **Moral**
 :class: tip
-> Do not try to ape your betters.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Do not try to ape your betters.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio318.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio318.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -179,13 +179,13 @@ At a great celebration in honor of King Lion, the Monkey was asked to dance for 
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章的寓意是：友谊可以战胜任何障碍，人类要记住回报友谊和非人类朋友的恩情。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章的寓意是：友谊可以战胜任何障碍，人类要记住回报友谊和非人类朋友的恩情。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio337_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio337_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE MONKEY AND THE DOLPHIN
@@ -194,13 +194,13 @@ It happened once upon a time that a certain Greek ship bound for Athens was wrec
 
 ```{admonition} **Moral**
 :class: tip
-> One falsehood leads to another.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> One falsehood leads to another.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio337.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio337.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -213,13 +213,13 @@ It happened once upon a time that a certain Greek ship bound for Athens was wrec
 
 ```{admonition} **寓意**
 :class: tip
-> 寓意：即使当别人看到你不被认可的特性时会大笑，依然要坚持自己的自信。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 寓意：即使当别人看到你不被认可的特性时会大笑，依然要坚持自己的自信。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio415_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio415_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## JUPITER AND THE MONKEY
@@ -228,13 +228,13 @@ There was once a baby show among the Animals in the forest. Jupiter provided the
 
 ```{admonition} **Moral**
 :class: tip
-> Mother love is blind.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Mother love is blind.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio415.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio415.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
