--- a/docs/source/fables/公鸡.md
+++ b/docs/source/fables/公鸡.md
@@ -9,13 +9,13 @@
 
 ```{admonition} **寓意**
 :class: tip
-> 那些对于好人有益的事正是对于坏人有害的。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 那些对于好人有益的事正是对于坏人有害的。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio54_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio54_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE THIEVES AND THE COCK
@@ -24,13 +24,13 @@ Some Thieves broke into a house, and found nothing worth taking except a Cock, w
 
 ```{admonition} **Moral**
 :class: tip
-> One should not be too quick to judge someone for the consequences of their actions without taking into account their intentions.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> One should not be too quick to judge someone for the consequences of their actions without taking into account their intentions.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio54.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio54.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -43,13 +43,13 @@ Some Thieves broke into a house, and found nothing worth taking except a Cock, w
 
 ```{admonition} **寓意**
 :class: tip
-> 骄兵必败。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 骄兵必败。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio142_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio142_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE EAGLE AND THE COCKS
@@ -58,13 +58,13 @@ There were two Cocks in the same farmyard, and they fought to decide who should 
 
 ```{admonition} **Moral**
 :class: tip
-> Pride comes before a fall.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Pride comes before a fall.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio142.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio142.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -77,13 +77,13 @@ There were two Cocks in the same farmyard, and they fought to decide who should 
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章寓意是：最了解自己的需要和情况的人，才是最懂得珍惜真正的宝贵的东西。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章寓意是：最了解自己的需要和情况的人，才是最懂得珍惜真正的宝贵的东西。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio149_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio149_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE COCK AND THE JEWEL
@@ -92,13 +92,13 @@ A Cock, scratching the ground for something to eat, turned up a Jewel that had b
 
 ```{admonition} **Moral**
 :class: tip
-> Moral: Contentment is better than riches. True happiness comes from within and not from material possessions.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Moral: Contentment is better than riches. True happiness comes from within and not from material possessions.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio149.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio149.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -111,13 +111,13 @@ A Cock, scratching the ground for something to eat, turned up a Jewel that had b
 
 ```{admonition} **寓意**
 :class: tip
-> 本文讲述的是一个贪婪的故事，捕鸟人想为自己和朋友准备晚餐，但当面对家中的牲畜时，他犹豫不决。不管是鹧鸪还是公鸡，它们都以智慧和温暖的话语希望保全自己的生命，但捕鸟人最终还是为了自己的贪婪，选择了杀死公鸡。这篇文章寓意是：贪婪容易让人忽  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 本文讲述的是一个贪婪的故事，捕鸟人想为自己和朋友准备晚餐，但当面对家中的牲畜时，他犹豫不决。不管是鹧鸪还是公鸡，它们都以智慧和温暖的话语希望保全自己的生命，但捕鸟人最终还是为了自己的贪婪，选择了杀死公鸡。这篇文章寓意是：贪婪容易让人忽  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio244_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio244_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE FOWLER, THE PARTRIDGE, AND THE COCK
@@ -126,13 +126,13 @@ One day, as a Fowler was sitting down to a scanty supper of herbs and bread, a f
 
 ```{admonition} **Moral**
 :class: tip
-> Moral: Never sacrifice a long-term benefit for a short-term gain.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Moral: Never sacrifice a long-term benefit for a short-term gain.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio244.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio244.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
