--- a/docs/source/fables/猫.md
+++ b/docs/source/fables/猫.md
@@ -9,13 +9,13 @@
 
 ```{admonition} **寓意**
 :class: tip
-> 如果有足够的智慧，面对那些曾认定的危险人物所假装出的无辜，你也不会上当受骗。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 如果有足够的智慧，面对那些曾认定的危险人物所假装出的无辜，你也不会上当受骗。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio2_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio2_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE CAT AND THE MICE
@@ -24,13 +24,13 @@ There was once a house that was overrun with Mice. A Cat heard of this, and said
 
 ```{admonition} **Moral**
 :class: tip
-> If you are wise you won't be deceived by the innocent airs of those whom you have once found to be dangerous.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> If you are wise you won't be deceived by the innocent airs of those whom you have once found to be dangerous.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio2.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio2.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -43,13 +43,13 @@ There was once a house that was overrun with Mice. A Cat heard of this, and said
 
 ```{admonition} **寓意**
 :class: tip
-> 骗子会伪装自己，但决骗不过聪明人。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 骗子会伪装自己，但决骗不过聪明人。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio12_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio12_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE CAT AND THE BIRDS
@@ -58,13 +58,13 @@ A Cat heard that the Birds in an aviary were ailing. So he got himself up as a d
 
 ```{admonition} **Moral**
 :class: tip
-> A villain may disguise himself, but he will not deceive the wise.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> A villain may disguise himself, but he will not deceive the wise.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio12.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio12.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -77,13 +77,13 @@ A Cat heard that the Birds in an aviary were ailing. So he got himself up as a d
 
 ```{admonition} **寓意**
 :class: tip
-> 要仔细观察环境并拥有敏锐的观察力，以免上当受骗，犯下不可弥补的错误。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 要仔细观察环境并拥有敏锐的观察力，以免上当受骗，犯下不可弥补的错误。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio59_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio59_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE OWL AND THE BIRDS
@@ -92,13 +92,13 @@ The Owl is a very wise bird; and once, long ago, when the first oak sprouted in 
 
 ```{admonition} **Moral**
 :class: tip
-> Heed wise counsel, lest you suffer the consequences of your folly.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Heed wise counsel, lest you suffer the consequences of your folly.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio59.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio59.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -111,13 +111,13 @@ The Owl is a very wise bird; and once, long ago, when the first oak sprouted in 
 
 ```{admonition} **寓意**
 :class: tip
-> 带有好借口的欲望，永远不会让坏人免于恶行。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 带有好借口的欲望，永远不会让坏人免于恶行。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio114_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio114_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE CAT AND THE COCK
@@ -126,13 +126,13 @@ A Cat pounced on a Cock, and cast about for some good excuse for making a meal o
 
 ```{admonition} **Moral**
 :class: tip
-> The want of a good excuse never kept a villain from crime.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> The want of a good excuse never kept a villain from crime.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio114.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio114.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -145,13 +145,13 @@ A Cat pounced on a Cock, and cast about for some good excuse for making a meal o
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章揭示了诡计阴险的危险，只有诚实和互信才能保证我们的幸福与安宁。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章揭示了诡计阴险的危险，只有诚实和互信才能保证我们的幸福与安宁。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio133_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio133_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE EAGLE, THE CAT,AND THE WILD SOW
@@ -160,13 +160,13 @@ An Eagle built her nest at the top of a high tree; a Cat with her family occupie
 
 ```{admonition} **Moral**
 :class: tip
-> The moral of this story is to be wary of trusting those who make false claims for their own benefit. Manipulating the truth can lead to disastrous consequences.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> The moral of this story is to be wary of trusting those who make false claims for their own benefit. Manipulating the truth can lead to disastrous consequences.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio133.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio133.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -179,13 +179,13 @@ An Eagle built her nest at the top of a high tree; a Cat with her family occupie
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章的寓意是：即使发生了惊人的改变，本性难移，要保持自我，不要迷失自我。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章的寓意是：即使发生了惊人的改变，本性难移，要保持自我，不要迷失自我。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio145_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio145_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## VENUS AND THE CAT
@@ -194,13 +194,13 @@ A Cat fell in love with a handsome young man, and begged the goddess Venus to ch
 
 ```{admonition} **Moral**
 :class: tip
-> The moral of this story is to be careful what you wish for, as it may not lead to the outcome you desire.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> The moral of this story is to be careful what you wish for, as it may not lead to the outcome you desire.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio145.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio145.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -213,13 +213,13 @@ A Cat fell in love with a handsome young man, and begged the goddess Venus to ch
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章寓意是：当遇到困扰，聪明人会想出一个狡猾的解决方案来解决问题，以及及早采取行动是解决难题的关键。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章寓意是：当遇到困扰，聪明人会想出一个狡猾的解决方案来解决问题，以及及早采取行动是解决难题的关键。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio153_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio153_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE GRASSHOPPER AND THE OWL
@@ -229,13 +229,13 @@ Addressing herself to the Grasshopper, she said in her pleasantest manner, "As I
 
 ```{admonition} **Moral**
 :class: tip
-> Moral: Do not be deceived by flattery; it can lead to dire consequences.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Moral: Do not be deceived by flattery; it can lead to dire consequences.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio153.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio153.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -248,13 +248,13 @@ Addressing herself to the Grasshopper, she said in her pleasantest manner, "As I
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章的寓意是：不要滥用特权，新人要尊重老人，面对新环境也要懂得适应。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章的寓意是：不要滥用特权，新人要尊重老人，面对新环境也要懂得适应。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio239_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio239_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE PARROT AND THE CAT
@@ -263,13 +263,13 @@ A Man once bought a Parrot and gave it the run of his house. It revelled in its 
 
 ```{admonition} **Moral**
 :class: tip
-> Moral of the story: Speak with respect at all times, because the way you talk can shape the way others perceive and treat you.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Moral of the story: Speak with respect at all times, because the way you talk can shape the way others perceive and treat you.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio239.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio239.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -284,13 +284,13 @@ A Man once bought a Parrot and gave it the run of his house. It revelled in its 
 :class: tip
 > 
 
-这篇文章的寓意是：只有团结合作，才能突破困境。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+这篇文章的寓意是：只有团结合作，才能突破困境。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio284_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio284_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## BELLING THE CAT
@@ -299,13 +299,13 @@ The Mice once called a meeting to decide on a plan to free themselves of their e
 
 ```{admonition} **Moral**
 :class: tip
-> It is one thing to say that something should be done, but quite a different matter to do it.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> It is one thing to say that something should be done, but quite a different matter to do it.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio284.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio284.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -318,13 +318,13 @@ The Mice once called a meeting to decide on a plan to free themselves of their e
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章寓意是: 不管做什么，勇气和有趣的想法是成功的关键。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章寓意是: 不管做什么，勇气和有趣的想法是成功的关键。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio339_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio339_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE MONKEY AND THE CAT
@@ -333,13 +333,13 @@ Once upon a time a Cat and a Monkey lived as pets in the same house. They were g
 
 ```{admonition} **Moral**
 :class: tip
-> The flatterer seeks some benefit at your expense.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> The flatterer seeks some benefit at your expense.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio339.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio339.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -352,13 +352,13 @@ Once upon a time a Cat and a Monkey lived as pets in the same house. They were g
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章提醒我们，没有经验的人应该慎重冒险，因为不可预测的风险可能会影响到他们的安全。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章提醒我们，没有经验的人应该慎重冒险，因为不可预测的风险可能会影响到他们的安全。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio352_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio352_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE CAT, THE COCK, AND THE YOUNG MOUSE
@@ -367,13 +367,13 @@ A very young Mouse, who had never seen anything of the world, almost came to gri
 
 ```{admonition} **Moral**
 :class: tip
-> Do not trust alone to outward appearances.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Do not trust alone to outward appearances.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio352.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio352.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -386,13 +386,13 @@ A very young Mouse, who had never seen anything of the world, almost came to gri
 
 ```{admonition} **寓意**
 :class: tip
-> 需要献出爱心，去帮助那些需要帮助的人，而不忘记自己也要给自己充足的养分。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 需要献出爱心，去帮助那些需要帮助的人，而不忘记自己也要给自己充足的养分。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio365_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio365_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE CAT AND THE BIRDS
@@ -401,13 +401,13 @@ A Cat was growing very thin. As you have guessed, he did not get enough to eat. 
 
 ```{admonition} **Moral**
 :class: tip
-> Be wise and shun the quack.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Be wise and shun the quack.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio365.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio365.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -420,13 +420,13 @@ A Cat was growing very thin. As you have guessed, he did not get enough to eat. 
 
 ```{admonition} **寓意**
 :class: tip
-> 这篇文章蕴含的寓意是：聪明的打算总能战胜无知，智慧必胜力量。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 这篇文章蕴含的寓意是：聪明的打算总能战胜无知，智慧必胜力量。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio407_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio407_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE CAT AND THE OLD RAT
@@ -435,13 +435,13 @@ There was once a Cat who was so watchful, that a Mouse hardly dared show the tip
 
 ```{admonition} **Moral**
 :class: tip
-> The wise do not let themselves be tricked a second time.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> The wise do not let themselves be tricked a second time.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio407.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio407.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
