--- a/docs/source/fables/老鼠.md
+++ b/docs/source/fables/老鼠.md
@@ -9,13 +9,13 @@
 
 ```{admonition} **寓意**
 :class: tip
-> 解决问题一定要有一个切合实际的方法。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 解决问题一定要有一个切合实际的方法。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio5_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio5_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE MICE IN COUNCIL
@@ -24,13 +24,13 @@ Once upon a time all the Mice met together in Council, and discussed the best me
 
 ```{admonition} **Moral**
 :class: tip
-> It is one thing to propose, another to execute.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> It is one thing to propose, another to execute.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio5.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio5.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -43,13 +43,13 @@ Once upon a time all the Mice met together in Council, and discussed the best me
 
 ```{admonition} **寓意**
 :class: tip
-> 即使一个人微小，也能够做出大事，报答他人恩情；不要看轻别人，要相信他们也有能力成就自己。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 即使一个人微小，也能够做出大事，报答他人恩情；不要看轻别人，要相信他们也有能力成就自己。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio18_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio18_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE LION AND THE MOUSE
@@ -58,13 +58,13 @@ A Lion asleep in his lair was waked up by a Mouse running over his face. Losing 
 
 ```{admonition} **Moral**
 :class: tip
-> Appearances can be deceiving and no act of kindness is ever too small to make a difference.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> Appearances can be deceiving and no act of kindness is ever too small to make a difference.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio18.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio18.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -77,13 +77,13 @@ A Lion asleep in his lair was waked up by a Mouse running over his face. Losing 
 
 ```{admonition} **寓意**
 :class: tip
-> 强者并非总是战争的胜方。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 强者并非总是战争的胜方。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio137_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio137_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE MOUSE AND THE BULL
@@ -92,13 +92,13 @@ A Bull gave chase to a Mouse which had bitten him in the nose: but the Mouse was
 
 ```{admonition} **Moral**
 :class: tip
-> The battle is not always to the strong.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> The battle is not always to the strong.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio137.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio137.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
@@ -111,13 +111,13 @@ A Bull gave chase to a Mouse which had bitten him in the nose: but the Mouse was
 
 ```{admonition} **寓意**
 :class: tip
-> 朋友虽小，也能帮上大忙。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> 朋友虽小，也能帮上大忙。  <p align='right'>[😺 不明白？问问伊索吧。](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio295_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
+<audio src='//quantile.shangfr.site/fables/audio295_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
 :::{tab-item} English
 ## THE LION AND THE MOUSE
@@ -126,13 +126,13 @@ A Lion lay asleep in the forest, his great head resting on his paws. A timid lit
 
 ```{admonition} **Moral**
 :class: tip
-> A kindness is never wasted.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
+> A kindness is never wasted.  <p align='right'>[😺 Not sure? Ask Aesop.](//shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio295.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
+<audio src='//quantile.shangfr.site/fables/audio295.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
 ::::
     
